--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="gentlemen-store/item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="gentlemen-store/item.html">Item One</a>
+                  <a href="item.html">Item One</a>
                 </h4>
                 <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
@@ -114,10 +114,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="gentlemen-store/item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="gentlemen-store/item.html">Item Two</a>
+                  <a href="item.html">Item Two</a>
                 </h4>
                 <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
@@ -130,10 +130,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="gentlemen-store/item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="gentlemen-store/item.html">Item Three</a>
+                  <a href="item.html">Item Three</a>
                 </h4>
                 <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
@@ -146,10 +146,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="gentlemen-store/item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="gentlemen-store/item.html">Item Four</a>
+                  <a href="item.html">Item Four</a>
                 </h4>
                 <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
@@ -162,10 +162,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="gentlemen-store/item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="gentlemen-store/item.html">Item Five</a>
+                  <a href="item.html">Item Five</a>
                 </h4>
                 <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
@@ -178,10 +178,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="gentlemen-store/item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="gentlemen-store/item.html">Item Six</a>
+                  <a href="item.html">Item Six</a>
                 </h4>
                 <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
