--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="/gentlement-store/tree/master/assets/image/gentlemenStore.png" style="width: 50px; height: auto;"> Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html"><img src="/assets/image/gentlemenStore.png" style="width: 50px; height: auto; position: relative; left: 0px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,17 +49,17 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container" style="margin-top: 5%;">
 
     <div class="row">
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Shop Name</h1>
+        <h2 class="my-4" style="text-align: center;">Gentlemen Store</h2>
         <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
+          <a href="#" class="list-group-item">Shirts</a>
+          <a href="#" class="list-group-item">Pants</a>
+          <a href="#" class="list-group-item">Belts</a>
         </div>
 
       </div>
