--- a/item.html
+++ b/item.html
@@ -12,7 +12,13 @@
 
   <!-- Bootstrap core CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
+  <!-- jQuery 1.8 or later, 33 KB -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <!-- Fotorama from CDNJS, 19 KB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
   <!-- Custom styles for this template -->
   <link href="css/shop-item.css" rel="stylesheet">
 
@@ -109,7 +115,9 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-white">Copyright &copy; Gentlemen Store</p>
+      <p class="text-white"><i class="fab fa-facebook-square"></i> <a href="https://www.facebook.com/profile.php?id=100009981968251"
+          style="text-decoration: none; color: white;"> Vinh Quang</a></p>
     </div>
     <!-- /.container -->
   </footer>
