--- a/index.html
+++ b/index.html
@@ -109,13 +109,47 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="aosomi.html"><img class="card-img-top" src="assets/image/product/SO-MI-8A.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="item.html">Item One</a>
+                  <a href="aosomi.html">ÁO SƠ MI</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!
+
+                <h6>575.000 VNĐ <button type="button" class="btn btn-success"> Buy Now</button>
+                </h6>
+                <p class="card-text">Áo sơ mi trơn tay dài Việt Tiến phom Regular.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="aovest.html"><img class="card-img-top" src="/assets/image/product/9532.jpeg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="aovest.html">ÁO VEST</a>
+                </h4>
+                <h6>2.585.000 VND <button type="button" class="btn btn-success" > Buy Now</button></h6>
+                <p class="card-text"  >Áo vest Việt Tiến phom Regular phù hợp với các quý ông công sở hiện đại.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="quankaki.html"><img class="card-img-top" src="/assets/image/product/Q6A.jpeg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="quankaki.html">QUẦN KHAKI</a>
+                </h4>
+                <h6>550.000 VNĐ <button type="button" class="btn btn-success"> Buy Now</button></h6>
+                <p class="card-text">Quần khaki Việt Tiến phom Regular.
                 </p>
               </div>
               <div class="card-footer">
@@ -126,30 +160,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="quantay.html"><img class="card-img-top" src="/assets/image/product/quan11a.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="item.html">Item Two</a>
+                  <a href="quantay.html">QUẦN TÂY</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!
-                  Lorem ipsum dolor sit amet.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="item.html">Item Three</a>
-                </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!
+                <h6>	580.000 VNĐ <button type="button" class="btn btn-success"> Buy Now</button></h6>
+                <p class="card-text">Quần tây Việt Tiến phom Regular , chất liệu Poly - Rayon - Spandex.
                 </p>
               </div>
               <div class="card-footer">
@@ -160,14 +177,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="thatlung.html"><img class="card-img-top" src="/assets/image/product/14a-2.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="item.html">Item Four</a>
+                  <a href="thatlung.html">THẮT LƯNG</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!
-                </p>
+                <h6>550.000 VNĐ <button type="button" class="btn btn-success"> Buy Now</button></h6>
+                <p class="card-text">Dây lưng nam cao cấp mặt khóa trượt được làm từ ngũ kim cao cấp.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -177,31 +193,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="vitien.html"><img class="card-img-top" src="/assets/image/product/VIDA-4A.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="item.html">Item Five</a>
+                  <a href="vitien.html">VÍ TIỀN</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!
-                  Lorem ipsum dolor sit amet.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="item.html">Item Six</a>
-                </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!
-                </p>
+                <h6>670.000 VNĐ <button type="button" class="btn btn-success"> Buy Now</button></h6>
+                <p class="card-text">Sản phẩm ví tiền được sản xuất thủ công từ da bê.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -225,8 +223,9 @@
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-white">Copyright &copy; Gentlemen Store</p>
-      <p class="text-white"><i class="fab fa-facebook-square"></i> <a href="https://www.facebook.com/profile.php?id=100009981968251"
-          style="text-decoration: none; color: white;"> Vinh Quang</a></p>
+      <p class="text-white"><i class="fab fa-facebook-square"></i> <a
+          href="https://www.facebook.com/profile.php?id=100009981968251" style="text-decoration: none; color: white;">
+          Vinh Quang</a></p>
     </div>
     <!-- /.container -->
   </footer>
