--- a/quantay.html
+++ b/quantay.html
@@ -74,11 +74,11 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
+          <img class="card-img-top img-fluid" src="/assets/image/product/quan11a.jpeg" alt="">
           <div class="card-body">
             <h3 class="card-title">Product Name</h3>
-            <h4>$24.99</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores, sint aperiam sequi pariatur praesentium animi perspiciatis molestias iure, ducimus!</p>
+            <h4>	580.000 VNĐ <button type="button" class="btn btn-success" style="position: relative; left: 5%;"> Buy Now</button></h4>
+            <p class="card-text">Quần tây Việt Tiến phom Regular , chất liệu Poly - Rayon - Spandex, phù hợp với quý ông công sở hiện đại. Sản phẩm được phân phối tại các cửa hàng Việt Tiến khu vực phía Nam.</p>
             <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
             4.0 stars
           </div>
@@ -90,14 +90,14 @@
             Product Reviews
           </div>
           <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <p>Sản phẩm này rất tốt, phù hợp với tôi.</p>
+            <small class="text-muted">Posted by Tran Van C on 10/11/20</small>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <p>Chất lượng tốt, mẫu mã ổn. Rất tốt!</p>
+            <small class="text-muted">Posted by Pham Ngoc B on 30/1/21</small>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <p>Phù hợp với giá tiền, giao hàng nhanh!</p>
+            <small class="text-muted">Posted by Nguyen Van A on 13/2/21</small>
             <hr>
             <a href="#" class="btn btn-success">Leave a Review</a>
           </div>
