update product img

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="aosomi.html"><img class="card-img-top" src="assets/image/product/SO-MI-8A.jpeg" alt=""></a>
+              <a href="aosomi.html"><img class="card-img-top" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/SO-MI-8A.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="aosomi.html">ÁO SƠ MI</a>
@@ -127,7 +127,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="aovest.html"><img class="card-img-top" src="/assets/image/product/9532.jpeg" alt=""></a>
+              <a href="aovest.html"><img class="card-img-top" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/9532.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="aovest.html">ÁO VEST</a>
@@ -143,7 +143,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="quankaki.html"><img class="card-img-top" src="/assets/image/product/Q6A.jpeg" alt=""></a>
+              <a href="quankaki.html"><img class="card-img-top" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/Q6A.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="quankaki.html">QUẦN KHAKI</a>
@@ -160,7 +160,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="quantay.html"><img class="card-img-top" src="/assets/image/product/quan11a.jpeg" alt=""></a>
+              <a href="quantay.html"><img class="card-img-top" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/quan11a.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="quantay.html">QUẦN TÂY</a>
@@ -177,7 +177,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="thatlung.html"><img class="card-img-top" src="/assets/image/product/14a-2.jpeg" alt=""></a>
+              <a href="thatlung.html"><img class="card-img-top" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/14a-2.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="thatlung.html">THẮT LƯNG</a>
@@ -193,7 +193,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="vitien.html"><img class="card-img-top" src="/assets/image/product/VIDA-4A.jpeg" alt=""></a>
+              <a href="vitien.html"><img class="card-img-top" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/VIDA-4A.jpeg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="vitien.html">VÍ TIỀN</a>
