--- a/aovest.html
+++ b/aovest.html
@@ -74,7 +74,7 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="/assets/image/product/9532.jpeg" alt="">
+          <img class="card-img-top img-fluid" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/9532.jpeg" alt="">
           <div class="card-body">
             <h3 class="card-title">ÁO VEST 1E9532CT2/C22</h3>
             <h4>2.585.000 VND <button type="button" class="btn btn-success" style="position: relative; left: 5%;"> Buy Now</button></h4>
