update link img

--- a/aosomi.html
+++ b/aosomi.html
@@ -74,7 +74,7 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/SO-MI-8A.jpeg" alt="">
+          <img class="card-img-top img-fluid" src="assets/image/product/SO-MI-8A.jpeg" alt="">
           <div class="card-body">
             <h3 class="card-title">ÁO SƠ MI 1N2273BT5/L7V</h3>
             <h4>575.000 VNĐ <button type="button" class="btn btn-success" style="position: relative; left: 5%;"> Buy Now</button></h4>
