--- a/quankaki.html
+++ b/quankaki.html
@@ -74,7 +74,7 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/Q6A.jpeg" alt="">
+          <img class="card-img-top img-fluid" src="assets/image/product/Q6A.jpeg" alt="">
           <div class="card-body">
             <h3 class="card-title">QUẦN KHAKI 1N6124NT5/QK0D</h3>
             <h4>	550.000 VNĐ <button type="button" class="btn btn-success" style="position: relative; left: 5%;"> Buy Now</button></h4>
