--- a/thatlung.html
+++ b/thatlung.html
@@ -74,7 +74,7 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="https://pthieenlong.github.io/gentlement-store/assets/image/product/14a-2.jpeg" alt="">
+          <img class="card-img-top img-fluid" src="assets/image/product/14a-2.jpeg" alt="">
           <div class="card-body">
             <h3 class="card-title">THẮT LƯNG 1M9338CH5/DL SỐ 13</h3>
             <h4>	550.000 VNĐ <button type="button" class="btn btn-success" style="position: relative; left: 5%;"> Buy Now</button></h4>
